syntax = "proto3";

package octoback.groceries.v1;

import "buf/validate/validate.proto";
import "google/protobuf/field_mask.proto";
import "octoback/groceries/v1/groceries.proto";

option go_package = "github.com/kiliandbigblue/octoback/groceries/v1;groceries";

// Service is the groceries service.
service Service {
    // Get the grocery list.
    rpc GetGroceryList(GetGroceryListRequest) returns (GetGroceryListResponse);
    // Create a grocery list
    rpc CreateGroceryList(CreateGroceryListRequest) returns (CreateGroceryListResponse);
    // Update a grocery list
    rpc UpdateGroceryList(UpdateGroceryListRequest) returns (UpdateGroceryListResponse);
    // List grocery lists
    rpc ListGroceryLists(ListGroceryListsRequest) returns (ListGroceryListsResponse);
    // Delete a grocery list
    rpc DeleteGroceryList(DeleteGroceryListRequest) returns (DeleteGroceryListResponse);
    // Get the grocery item.
    rpc GetGroceryItem(GetGroceryItemRequest) returns (GetGroceryItemResponse);
    // Create a grocery item
    rpc CreateGroceryItem(CreateGroceryItemRequest) returns (CreateGroceryItemResponse);
    // Update a grocery item
    rpc UpdateGroceryItem(UpdateGroceryItemRequest) returns (UpdateGroceryItemResponse);
    // List grocery items
    rpc ListGroceryItems(ListGroceryItemsRequest) returns (ListGroceryItemsResponse);
    // Delete a grocery item
    rpc DeleteGroceryItem(DeleteGroceryItemRequest) returns (DeleteGroceryItemResponse);
}

message GetGroceryListRequest {
    // The ID of the grocery list to get.
    int64 id = 1;
}

message GetGroceryListResponse {
    // The grocery list.
    GroceryList grocery_list = 1;
}

message CreateGroceryListRequest {
    // The grocery list name.
    string name = 1 [(buf.validate.field).string.min_len = 1];
}

message CreateGroceryListResponse {
    // The grocery list.
    GroceryList grocery_list = 1;
}

message UpdateGroceryListRequest {
    // The grocery list.
    GroceryList grocery_list = 1;
    // The update mask.
    google.protobuf.FieldMask update_mask = 2;
}

message UpdateGroceryListResponse {
    // The grocery list.
    GroceryList grocery_list = 1;
}

message ListGroceryListsRequest {}

message ListGroceryListsResponse {
    repeated GroceryList grocery_lists = 1;
}

message DeleteGroceryListRequest {
    // The ID of the grocery list to delete.
    int64 id = 1;
}

message DeleteGroceryListResponse {}

message GetGroceryItemRequest {
    // The ID of the grocery item to get.
    int64 id = 1;
}

message GetGroceryItemResponse {
    // The grocery item.
    GroceryItem grocery_item = 1;
}

message CreateGroceryItemRequest {
    // The ID of the grocery list to create the item for.
    int64 grocery_list = 1;
    // The grocery item name.
    string name = 2 [(buf.validate.field).string = { min_len: 1, max_len: 100 }];
    // The grocery item quantity.
    int32 quantity = 3 [(buf.validate.field).int32.gt = 0];
    // The grocery item checked status.
    bool checked = 4;
}

message CreateGroceryItemResponse {
    // The grocery item.
    GroceryItem grocery_item = 1;
}

message UpdateGroceryItemRequest {
    // The grocery item.
    GroceryItem grocery_item = 1;
    // The update mask.
    google.protobuf.FieldMask update_mask = 2;
}

message UpdateGroceryItemResponse {
    // The grocery item.
    GroceryItem grocery_item = 1;
}

message ListGroceryItemsRequest {
    // The ID of the grocery list to list items for.
    int64 grocery_list = 1;
}

message ListGroceryItemsResponse {
    repeated GroceryItem grocery_items = 1;
}

message DeleteGroceryItemRequest {
    // The ID of the grocery item to delete.
    int64 id = 1;
}

message DeleteGroceryItemResponse {}
